--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -2,16 +2,16 @@
 
 {% block title %}Hello UserController!{% endblock %}
 
+{% block stylesheets %}
+            <link href="{{ asset('assets/css/forms/register.css') }}" type="text/css" rel="stylesheet"
+{% endblock %}
+
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
 <div class="example-wrapper">
     <h1>Registro de Usuarios ✅</h1>
-    {{form_start(form)}}
-    {{form_widget(form)}}
+    {{ form_start(form, {'attr': {'class': 'form'}}) }}
+        {{form_widget(form)}}
     {{form_end(form)}}
 </div>
 {% endblock %}
