--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,14 +6,30 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            <link href="{{ asset('assets/css/style.css') }}" type="text/css" rel="stylesheet"
+            <link href="{{ asset('assets/css/style.css') }}" type="text/css" rel="stylesheet">
+            <link href="{{ asset('assets/css/header.css') }}" type="text/css" rel="stylesheet">
+            <link href="{{ asset('assets/css/forms/register.css') }}" type="text/css" rel="stylesheet">
         {% endblock %}
 
-        {% block javascripts %}
+        {# {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+        {% endblock %} #}
     </head>
     <body>
+        {% block header %}
+        <nav id="nav" class="container">
+            <h1>Tareas Symfony</h1>
+            <div class="links">
+                <a href="{{ path('tasks')}}">Inicio</a>
+                <a href="">Mis Tareas</a>
+                <a href="">Iniciar Sesion</a>
+                <a href="{{ path('register')}}">Registro</a>
+            </div>
+        </nav>
+        {% endblock %}
         {% block body %}{% endblock %}
+        {% block javascripts %}
+            <script src="{{ asset('js/header.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
