--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -2,9 +2,9 @@
 
 {% block title %}Hello UserController!{% endblock %}
 
-{% block stylesheets %}
-            <link href="{{ asset('assets/css/forms/register.css') }}" type="text/css" rel="stylesheet"
-{% endblock %}
+{# {% block stylesheets %}
+    <link href="{{ asset('assets/css/forms/register.css') }}" type="text/css" rel="stylesheet">
+{% endblock %} #}
 
 {% block body %}
 
