--- a/public/assets/css/forms/register.css
+++ b/public/assets/css/forms/register.css
@@ -7,26 +7,27 @@
     gap: 20px;
     padding: 25px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border: 1px solid #0f100f;
 }
 
 .input-group {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 .input-group label {
     font-size: 14px;
     color: #242424;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .input-group input {
     width: 90%;
     padding: 5px 15px;
     border-radius: 8px;
-    background-color: #f2f2f2;
+    background-color: #f9f9f9;
 }
 
 .input-group input:focus {
@@ -37,9 +38,11 @@
 }
 
 .button--checkout {
+    max-width: 250px;
     font-size: 14px;
     font-weight: bold;
     letter-spacing: 1px;
+    text-align: center;
     text-transform: uppercase;
     padding: 10px 15px;
     margin-top: 20px;
@@ -50,4 +53,8 @@
     background-color: #0f100f;
     color: #f2f2f2;
 
+}
+
+.register--text{
+    font-size: 14px;
 }
