--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -1,6 +1,6 @@
 #nav {
     position: sticky;
-    top: -70px;
+    top: 0px;
     left: 0;
     width: 100%;
     display: flex;
@@ -8,13 +8,14 @@
     justify-content: space-between;
     height: 70px;
     background: #0f100f;
-    transition: 0.25 linear;
+    transition: .25s linear;
 }
 
 #nav.scrolled-down {
-    top: 0;
+    top: -70px;
     box-shadow: 0 10px 50px rgba(0, 0, 0, 14%);
 }
+
 
 #nav .links {
     display: flex;
@@ -23,11 +24,11 @@
 }
 
 #nav a {
-    color: #f8f8f8;
+    color: #f2f2f2;
 }
 
 #nav h1 {
-    color: #f8f8f8;
+    color: #f2f2f2;
     width: 34 px;
     height: 34px;
     margin-left: 5%;
